[gd_scene load_steps=30 format=3 uid="uid://d26ifd4nga5eu"]

[ext_resource type="Script" uid="uid://b8rcjhtyrerht" path="res://Scenes/online_map.gd" id="1_lrc77"]
[ext_resource type="Texture2D" uid="uid://dix63h2yho0yb" path="res://Images/image (2).png" id="2_ovdqi"]
[ext_resource type="FontFile" uid="uid://q4s1an2fkmo4" path="res://Pixel Game.otf" id="3_mebwe"]
[ext_resource type="Script" uid="uid://wyq2rb1orde3" path="res://Scripts/BackToMain.gd" id="4_hw5ll"]
[ext_resource type="Texture2D" uid="uid://bi8apwat1hb4t" path="res://Images/poop2.png" id="5_hpv2t"]
[ext_resource type="Script" uid="uid://bhphx8ltgcrse" path="res://Scenes/color_rect.gd" id="6_58ghl"]
[ext_resource type="Script" uid="uid://cakpm7hgud47e" path="res://Scenes/2222222.gd" id="7_xcpcn"]
[ext_resource type="Script" uid="uid://df7uiyeodrp64" path="res://Scenes/33.gd" id="8_mbgw2"]
[ext_resource type="PackedScene" uid="uid://x367r2ypk5m4" path="res://Scenes/color_rect.tscn" id="9_eyoeu"]
[ext_resource type="PackedScene" uid="uid://rkmlckfyvcx7" path="res://Scenes/testMapNoPlayer.tscn" id="10_ovdqi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ani7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wiph"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2u5t0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhoa1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7u73u"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5q4l3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdake"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_2u5t0"]
resource_name = "111"
length = 0.19
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(472, 440), Vector2(471, 437)]
}

[sub_resource type="Animation" id="Animation_7u73u"]
resource_name = "1111"
length = 0.19
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(471, 437), Vector2(472, 440)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mhoa1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(472, 440)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7u73u"]
_data = {
&"111": SubResource("Animation_2u5t0"),
&"1111": SubResource("Animation_7u73u"),
&"RESET": SubResource("Animation_mhoa1")
}

[sub_resource type="Animation" id="Animation_5q4l3"]
resource_name = "222"
length = 0.19
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(601, 439), Vector2(598, 436)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_kdake"]
resource_name = "2222"
length = 0.19
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(598, 436), Vector2(601, 439)]
}

[sub_resource type="Animation" id="Animation_cgf1d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(601, 439)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgf1d"]
_data = {
&"222": SubResource("Animation_5q4l3"),
&"2222": SubResource("Animation_kdake"),
&"RESET": SubResource("Animation_cgf1d")
}

[sub_resource type="Animation" id="Animation_ixawi"]
resource_name = "333"
length = 0.19
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(427, 552), Vector2(424, 549)]
}

[sub_resource type="Animation" id="Animation_0ivmu"]
resource_name = "3333"
length = 0.19
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(424, 549), Vector2(427, 552)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ht1ox"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(427, 552)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ht1ox"]
_data = {
&"333": SubResource("Animation_ixawi"),
&"3333": SubResource("Animation_0ivmu"),
&"RESET": SubResource("Animation_ht1ox")
}

[node name="OnlineMenu" type="Node2D"]
script = ExtResource("1_lrc77")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Image(2)" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.780392)
position = Vector2(581.5, 329)
scale = Vector2(0.907031, 0.908333)
texture = ExtResource("2_ovdqi")

[node name="HostButton" type="Button" parent="CanvasLayer"]
offset_left = 498.0
offset_top = 424.0
offset_right = 576.0
offset_bottom = 473.0
theme_override_colors/font_outline_color = Color(0.282353, 0.0509804, 0.447059, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_mebwe")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_3ani7")
theme_override_styles/normal = SubResource("StyleBoxFlat_6wiph")
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer"]
offset_left = 622.0
offset_top = 424.0
offset_right = 693.0
offset_bottom = 473.0
theme_override_colors/font_outline_color = Color(0.282353, 0.0509804, 0.447059, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_mebwe")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_2u5t0")
theme_override_styles/normal = SubResource("StyleBoxFlat_mhoa1")
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer"]
offset_left = 591.0
offset_top = 479.0
offset_right = 849.0
offset_bottom = 528.0
theme_override_colors/font_outline_color = Color(0.282353, 0.0509804, 0.447059, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_mebwe")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7u73u")
placeholder_text = "Enter IP Address"
alignment = 1

[node name="Username" type="LineEdit" parent="CanvasLayer"]
offset_left = 319.0
offset_top = 478.0
offset_right = 577.0
offset_bottom = 527.0
theme_override_colors/font_outline_color = Color(0.282353, 0.0509804, 0.447059, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_mebwe")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_7u73u")
placeholder_text = "Enter Username"
alignment = 1

[node name="BackToMain" type="Button" parent="CanvasLayer"]
offset_left = 447.0
offset_top = 535.0
offset_right = 725.0
offset_bottom = 584.0
theme_override_colors/font_outline_color = Color(0.282353, 0.0509804, 0.447059, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_mebwe")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_5q4l3")
theme_override_styles/normal = SubResource("StyleBoxFlat_kdake")
text = "Back to Main Menu"
script = ExtResource("4_hw5ll")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 997.0
offset_top = 519.0
offset_right = 1066.0
offset_bottom = 555.0
theme_override_colors/font_outline_color = Color(0.286275, 0.054902, 0.447059, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_mebwe")
theme_override_font_sizes/font_size = 35
text = "UPNP:"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer"]
offset_left = 1008.0
offset_top = 550.0
offset_right = 1052.0
offset_bottom = 574.0

[node name="Poop2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(572, 237)
scale = Vector2(0.451, 0.39)
texture = ExtResource("5_hpv2t")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 472.0
offset_top = 440.0
offset_right = 484.0
offset_bottom = 452.0
color = Color(0.772549, 0.560784, 0.956863, 1)
script = ExtResource("6_58ghl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
libraries = {
&"": SubResource("AnimationLibrary_7u73u")
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = 601.0
offset_top = 439.0
offset_right = 613.0
offset_bottom = 452.0
color = Color(0.772549, 0.560784, 0.956863, 1)
script = ExtResource("7_xcpcn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect2"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_cgf1d")
}

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer"]
offset_left = 427.0
offset_top = 552.0
offset_right = 437.0
offset_bottom = 563.0
color = Color(0.772549, 0.560784, 0.956863, 1)
script = ExtResource("8_mbgw2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect3"]
libraries = {
&"": SubResource("AnimationLibrary_ht1ox")
}

[node name="fade" parent="CanvasLayer" instance=ExtResource("9_eyoeu")]

[node name="Timer" type="Timer" parent="CanvasLayer/fade"]

[node name="fade2" parent="CanvasLayer" instance=ExtResource("9_eyoeu")]
visible = false

[node name="Timer2" type="Timer" parent="CanvasLayer/fade2"]

[node name="TestMap" parent="." instance=ExtResource("10_ovdqi")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://b84xvofva7ep7")
spawn_path = NodePath("..")

[connection signal="mouse_entered" from="CanvasLayer/HostButton" to="CanvasLayer/ColorRect" method="_on_host_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HostButton" to="CanvasLayer/ColorRect" method="_on_host_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/JoinButton" to="CanvasLayer/ColorRect2" method="_on_join_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/JoinButton" to="CanvasLayer/ColorRect2" method="_on_join_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/BackToMain" to="CanvasLayer/ColorRect3" method="_on_back_to_main_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/BackToMain" to="CanvasLayer/ColorRect3" method="_on_back_to_main_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/BackToMain" to="." method="_on_back_to_main_pressed"]
[connection signal="pressed" from="CanvasLayer/BackToMain" to="CanvasLayer/BackToMain" method="_on_pressed"]
[connection signal="toggled" from="CanvasLayer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="timeout" from="CanvasLayer/fade/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/fade2/Timer2" to="." method="_on_timer_2_timeout"]
